--- a/index.html
+++ b/index.html
@@ -157,5 +157,37 @@
 					}})()
 			</script>
 		<script type="text/javascript" src='vendor/rrssb.min.js'></script>
+<!-- World SDK buttons -->
+<style>#worldBar{position:fixed;left:0;right:0;bottom:16px;display:flex;gap:12px;justify-content:center;z-index:9999}#worldBar button{padding:10px 14px;border:0;border-radius:10px;background:#1677ff;color:#fff;font-size:14px}</style>
+<div id="worldBar"><button onclick="worldLogin()">登录</button><button onclick="worldPay()">支付 USDC 0.10</button></div>
+<script type="module" src="./world.js"></script>
 	</body>
 </html>
+<!-- World SDK buttons -->
+<style>
+#worldBar{position:fixed;left:0;right:0;bottom:16px;display:flex;gap:12px;justify-content:center;z-index:9999}
+#worldBar button{padding:10px 14px;border:0;border-radius:10px;background:#1677ff;color:#fff;font-size:14px}
+#btnPay[disabled]{opacity:.6}
+</style>
+<div id="worldBar">
+  <button id="btnLogin" onclick="worldLogin()">登录</button>
+  <button id="btnPay" onclick="worldPay()">支付 USDC 0.10</button>
+</div>
+<script type="module" src="./world.js"></script>
+<!-- World HUD / Buttons / Toast -->
+<style>
+#hud{position:fixed;top:10px;left:10px;font:14px/1.2 system-ui;color:#445}
+#toast{position:fixed;left:50%;bottom:90px;transform:translateX(-50%);background:#111;color:#fff;padding:10px 14px;border-radius:10px;opacity:0;transition:.25s}
+#toast.show{opacity:1}
+#worldBar{position:fixed;left:0;right:0;bottom:16px;display:flex;gap:12px;justify-content:center;z-index:9999}
+#worldBar button{padding:10px 14px;border:0;border-radius:10px;background:#1677ff;color:#fff;font-size:14px}
+#btnPay[disabled]{opacity:.6}
+#btnLogin[disabled]{opacity:.6}
+</style>
+<div id="hud">玩家：<span id="playerName">游客</span> ｜ 余额：<span id="balance">—</span></div>
+<div id="toast"></div>
+<div id="worldBar">
+  <button id="btnLogin" onclick="worldLogin()">登录</button>
+  <button id="btnPay"   onclick="worldPay()">支付 USDC 0.10</button>
+</div>
+<script type="module" src="./world.js"></script>
