--- a/index.html
+++ b/index.html
@@ -161,7 +161,11 @@
 <style>#worldBar{position:fixed;left:0;right:0;bottom:16px;display:flex;gap:12px;justify-content:center;z-index:9999}#worldBar button{padding:10px 14px;border:0;border-radius:10px;background:#1677ff;color:#fff;font-size:14px}</style>
 <div id="worldBar"><button onclick="worldLogin()">登录</button><button onclick="worldPay()">支付 USDC 0.10</button></div>
 <script type="module" src="./world.js"></script>
-	</body>
+  <div style="position:fixed;left:16px;bottom:16px;z-index:9">
+    <a href="leaderboard.html" style="padding:10px 14px;border-radius:10px;background:#2563eb;color:#fff;text-decoration:none">查看排行榜</a>
+  </div>
+	<script type="module" src="./rank.js"></script>
+</body>
 </html>
 <!-- World SDK buttons -->
 <style>
