--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<style>#worldBar{position:fixed;left:0;right:0;bottom:16px;display:flex;gap:12px;justify-content:center;z-index:9999}#worldBar button{padding:10px 14px;border:0;border-radius:10px;background:#2563eb;color:#fff;font-size:14px}#btnPay[disabled]{opacity:.6}</style>
 <!DOCTYPE html>
 <html lang='en'>
 	<head>
