--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 		<script src="vendor/sweet-alert.min.js"></script>
 		<link rel="stylesheet" href="style/rrssb.css"/>
 		<script data-ad-client="ca-pub-9107422120987163" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-	</head>
+	  <link rel="stylesheet" href="style/world.css">
+</head>
 	<body><div class="game-wrapper">
 		<canvas id="canvas"></canvas>
 		<div id="overlay" class="faded overlay"></div>
