--- a/leaderboard.html
+++ b/leaderboard.html
@@ -16,6 +16,7 @@ th{font-weight:600;color:#93a4b8}
 a.btn{display:inline-block;padding:10px 14px;border-radius:10px;text-decoration:none;background:#2563eb;color:#fff}
 a.btn.secondary{background:#374151}
 </style>
+  <link rel="stylesheet" href="style/world.css">
 </head>
 <body>
   <div class="wrapper">
